[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"
authors = ["Matt Kline <matt@bitbashing.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
fixedbitset = "0.4"
itertools = "0.10"
